--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -28,6 +28,7 @@
 		"svelte": "^3.34.0",
 		"svelte-check": "^2.0.0",
 		"svelte-feather-icons": "^3.5.0",
+		"svelte-highlight": "^5.0.0",
 		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^2.2.15",
 		"tslib": "^2.0.0",
@@ -42,7 +43,12 @@
 		"cookie": "^0.4.1",
 		"electron": "^15.1.0",
 		"happy-svelte-scrollbar": "^1.1.0",
+		"hast-to-hyperscript": "^10.0.1",
 		"hex-rgb": "^5.0.0",
+		"highlight.js": "^11.2.0",
+		"hyperscript": "^2.0.2",
+		"lowlight": "^2.3.0",
+		"refractor": "^4.2.1",
 		"svelte-slimscroll": "^1.0.6",
 		"three": "^0.132.2",
 		"troika-three-text": "^0.42.0"
