--- a/src-electron/package.json
+++ b/src-electron/package.json
@@ -11,5 +11,9 @@
 	"devDependencies": {
 		"@types/electron": "^1.6.10",
 		"electron": "^15.1.0"
+	},
+	"dependencies": {
+		"@types/uuid": "^8.3.1",
+		"uuid": "^8.3.2"
 	}
 }
