--- a/src-svelte/package.json
+++ b/src-svelte/package.json
@@ -31,6 +31,8 @@
 		"svelte-highlight": "^5.0.0",
 		"svelte-preprocess": "^4.9.4",
 		"tailwindcss": "^2.2.15",
+		"tree-sitter-cli": "^0.20.0",
+		"tree-sitter-javascript": "^0.19.0",
 		"tslib": "^2.0.0",
 		"typescript": "^4.0.0"
 	},
@@ -51,6 +53,9 @@
 		"refractor": "^4.2.1",
 		"svelte-slimscroll": "^1.0.6",
 		"three": "^0.132.2",
-		"troika-three-text": "^0.42.0"
+		"tree-sitter": "^0.20.0",
+		"tree-sitter-typescript": "^0.19.0",
+		"troika-three-text": "^0.42.0",
+		"web-tree-sitter": "^0.19.4"
 	}
 }
