--- a/electron/package.json
+++ b/electron/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "nyx-athena-electron",
+	"name": "nathene-electron",
 	"version": "0.0.1",
 	"description": "a editor for source files",
 	"main": "./dist/index.js",
@@ -34,6 +34,7 @@
 		"adm-zip": "^0.5.9",
 		"deno-vm": "^0.8.1",
 		"electron-squirrel-startup": "^1.0.0",
+		"fast-json": "^2.1.0",
 		"microjob": "^0.7.0",
 		"nan": "^2.14.0",
 		"node-abi": "^3.5.0",
