Rust Implementation slow in vscode so actually this is not viable for me, which is a bit sad because i'd love to move the backend code but maybe i'll start using go(golang).

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
 	"[svelte]": {
 		"editor.defaultFormatter": "svelte.svelte-vscode"
 	},
-	"rust-analyzer.procMacro.enable": false
+	"[rust]": {
+		"editor.defaultFormatter": "rust-lang.rust"
+	},
+	"rust-analyzer.linkedProjects": ["./tauri/src-tauri/Cargo.toml"],
+	"rust-analyzer.checkOnSave.enable": false
 }
