--- a/servers/core/window_electron/package.json
+++ b/servers/core/window_electron/package.json
@@ -28,6 +28,7 @@
 		"@types/adm-zip": "^0.4.34",
 		"@types/node-abi": "^3.0.0",
 		"@types/node-fetch": "^2.5.12",
+		"@types/node-ipc": "^9.2.0",
 		"@types/uuid": "^8.3.1",
 		"@types/workerpool": "^6.1.0",
 		"@types/ws": "^8.2.2",
@@ -40,6 +41,7 @@
 		"node-abi": "^3.5.0",
 		"node-fetch": "^2.6.6",
 		"node-gyp": "^8.4.1",
+		"node-ipc": "^10.1.0",
 		"piscina": "^3.1.0",
 		"uuid": "^8.3.2",
 		"vm2": "^3.9.5",
