--- a/runtime/package.json
+++ b/runtime/package.json
@@ -10,8 +10,10 @@
   "license": "MIT",
   "dependencies": {
     "@types/node-ipc": "^9.2.0",
+    "@types/uuid": "^8.3.3",
     "@types/ws": "^8.2.2",
     "node-ipc": "^10.1.0",
+    "uuid": "^8.3.2",
     "ws": "^8.4.0"
   },
   "optionalDependencies": {
