--- a/nathene/nathcommrapi/package.json
+++ b/nathene/nathcommrapi/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/node-ipc": "^9.2.0",
-    "node-ipc": "^10.1.0"
+    "node-ipc": "^10.1.0",
+    "uuid": "^8.3.2"
   }
 }
